style.scss
---
---

//
// IMPORTS
//

@import "reset";
@import "variables";
@import "mixins";
// Syntax highlighting @import is at the bottom of this file

/**************/
/* BASE RULES */
/**************/

:root {
  color-scheme: light dark;
}

body {
  display: flex;
  flex-direction: column;
  background-color: light-dark($background);
  color: light-dark($foreground);
  font-family: $dm-sans;
  font-weight: 300;
  line-height: 1.6;

  // respect user contrast preferences
  @media (prefers-contrast: less) {
    filter: contrast(.8);
  }

  @media (prefers-color-scheme: dark) {
    img {
      filter: brightness(80%);
    }
  }
}

h1 {
  // calc() wrapped around clamp() is a hack for Sass error
  font-size: calc(clamp(3rem, 4vw + 3rem, 10rem));
}

h2 {
  font-size: calc(1vw + 1.75rem);
}

h3 {
  font-size: calc(1vw + 1.5rem);
  line-height: 1.2;
}

h4 {
  font-size: calc(clamp(1.125rem, 1vw + 1.5rem, 1.8rem));
  font-weight: 500;
  color: light-dark($secondary);
  text-align: center;
}

p {
  margin: 1rem 0 1.5rem;
}

p, li, dt, dd {
  font-size: calc(.5vw + 1.1rem);
  line-height: 1.5;
}

ol {
  padding-inline-start: 1.5em;

  li {
    padding-inline: 1em;

    &::marker {
    text-align: start;
  }
  }
}

a {
  color: light-dark($blue-bright, lighten($blue-bright, 40%));
  font-weight: 500;

  // &:visited,
  // &:active {
  //   color: light-dark($red-bright, lighten($blue-logo, 20%));
  // }

  &[aria-current] {
    border-block-end: 5px solid currentColor;

    @include mobile {
      border-block-end: none;
      background-color: light-dark($contrast1);
    }
  }
}

.container {
  margin: 0 auto;
  padding: 6vh 3vh;
  max-width: 80rem;
  width: 100%;
}


// silver background

.section-light {
  background-color: light-dark($background);
  color: light-dark($foreground);

  h2,
  h3 {
    color: light-dark($contrast3);
    text-align: center;
  }
}

// dark blue background

.section-dark {
  background-color: light-dark($contrast1);
  color: light-dark($contrast2);

  h2,
  h3 {
    color: light-dark($white, $silver);
    text-align: center;
  }
}



// outer container for header

.wrapper-masthead {
  background-color: light-dark($primary);
}

/* inner container with header/nav */

.site-info {
  flex: 1;

  a {
    display: grid;
    grid-template-columns: minmax(100px, 25%) 1fr;
    align-items: center;
    color: light-dark($white, $white);
    text-decoration: none;

    span {
      display: inline-block;
      padding-inline-start: 1.2rem;
      font-family: $oswald;
      font-size: calc(clamp(2rem, 2vw + 1.8rem, 3.1rem));
      line-height: 1;
    }
  }
}


// First section on Home

#intro {
  width: 100%;

  h1 {
    padding-block: .6em;
    font-family: $dm-serif-display;
    font-size: calc(clamp(2.5rem, 3vw + 1rem, 3.5rem));
    line-height: 1.2;
  }

  span {
    color: light-dark(lighten($green-logo, 5%), lighten($green-logo, 30%));
    font-weight: 800;
    letter-spacing: .05em;
  }

  p {
    font-size: calc(clamp(1rem, 1.25vw + 1rem, 1.5rem));
  }

  img {
    justify-self: end;
    max-width: 100%;
  }
}

.callout {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0vh 4vh;

  p {
    max-width: 35ch;
    color: light-dark($blue-dark, $silver);
    font-family: $dm-serif-display;
    font-size: calc(clamp(1.3rem, 4vw + 1rem, 2.7rem));
    font-weight: 500;
    line-height: 1.4;
  }
}

.section-video {
  padding-block-start: 6vh;

  .able-wrapper {
    .able-controller {
      background-color: light-dark($contrast1);
    }

    .able-status-bar {
      padding-block-start: 0;
      padding-block-end: 0;
    }

    img {
      margin: 0 auto;
    }
  }

  .wrapper-video {
    max-width: 50rem;
    margin: 0 auto;
    padding-block: 2vh;

    .video {
      width: 100%;
    }
  }
}

.section-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 auto;
  background-color: light-dark($contrast1);
  color: light-dark($contrast2);
  padding-block: 4vh;

  p {
    margin-block-end: 1.4em;
    font-size: calc(.5vw + 1.3rem);
  }

  a {
    color: lighten($blue-faded, 32%);
    font-weight: 600;
  }
}

#testimonials {
  // padding: 6vh;

  h2 {
    margin-block-end: 2.75em;
  }
  ul {
    list-style-type: none;
    padding-inline-start: 0;

    li {
      padding-inline-start: 0;
    }
  }

  figure {
    margin-block-end: 3rem;
    background-color: light-dark($white, lighten($black, 10%));
    color: light-dark($contrast3);
    position: relative;

    &::before {
      bottom: 0;
      content: "";
      left: 0;
      position: absolute;
      right: 0;
      top: 0;
      background: light-dark($white, lighten($black, 10%)) url(/img/quote-marks-2.svg) 10% 10% no-repeat;
      background-size: 50px auto;
      transform: skewY(15deg);
    }

    blockquote {
      position: relative;
      margin-bottom: 0;
      padding: 4.2rem 2rem 1.5rem;
      font-size: 1.125rem;
      line-height: 1.5;
    }
    
    figcaption {
      position: relative;
      padding-block-end: 2rem;
      padding-inline-end: 2rem;
      color: light-dark($contrast3);
      text-align: right;
    }
  }
}


// Pages

.page {
  width: 100vw;
}

#heading-about {
  display: flex;
  background-color: light-dark($contrast1);
  color: light-dark($contrast2);
  
  h1 {
    /*padding-block: 12vh;*/
    line-height: 1.25;
    text-align: center;
  }
}
/* ... */

